@@ -193,7 +193,6 @@ span.divider{
 	font-weight: normal;
 }
 
-/********** REQUIREMENTS TABLE *************/
 span.link{
 	color:#333399;
 	cursor: pointer;
